# clever-code

./: CNAME  README.md  TEST.md  index.html  install.sh
agent/: clever-solution.md
command/: add.md  deploy.md  inspect.md  invite.md  logs.md  new-solution.md  new.md  page.md  rebuild.md  up.md
guides/: architecture.md  brand.md  conventions.md
guides/recipes/: auth-page.md  crud.md
scripts/: add-page.sh  add-resource.sh  check-slug.sh  clever  inspect.sh  keycloak-client.sh  scaffold.sh  up.sh
templates/audius-base/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
templates/audius-base/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
templates/audius-base/backend/alembic/: env.py
templates/audius-base/backend/alembic/versions/: 001_initial.py
templates/audius-base/backend/src/: main.py
templates/audius-base/backend/src/api/: items.py  me.py
templates/audius-base/backend/src/core/: auth.py  config.py  db.py
templates/audius-base/frontend/: Dockerfile  package.json  tailwind.config.ts
templates/audius-base/frontend/src/app/: layout.tsx  page.tsx
